--- a/Zirpl.AppEngine.CodeGeneration.VS2013/PartialTemplateClasses.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/PartialTemplateClasses.tt
@@ -24,8 +24,7 @@ foreach (var po in projectItems)
 {
 	var fullPath = GetFullPath(po);
 		this.LogLineToBuildPane(fullPath);
-	if (fullPath.EndsWith("Template.tt")
-		&& fullPath.Contains("V1"))
+	if (fullPath.EndsWith("Template.tt"))
 	{
 		//this.LogLineToBuildPane(fullPath);
 		templateFilePaths.Add(fullPath);
@@ -34,18 +33,28 @@ foreach (var po in projectItems)
 
 #>
 using Zirpl.AppEngine.CodeGeneration.TextTemplating;
+using Zirpl.AppEngine.CodeGeneration.V1;
 
-namespace Zirpl.AppEngine.CodeGeneration.V1.Templates
-{
 <#
 
 foreach (var filePath in templateFilePaths)
 {
-	var fileName = System.IO.Path.GetFileNameWithoutExtension(filePath);
+	var fileNameWithoutExtension = System.IO.Path.GetFileNameWithoutExtension(filePath);
+	var fileName = System.IO.Path.GetFileName(filePath);
+	var startOfNamespaceWithinFilePath = filePath.IndexOf("Zirpl.AppEngine.CodeGeneration.VS2013");
+	var classNamespace = filePath.Substring(startOfNamespaceWithinFilePath).Replace(@"\", ".").Replace(".VS2013.", ".").Replace(fileName, "");
+	classNamespace = classNamespace.Substring(0, classNamespace.Length - 1);
+
+	
+
+	
 #>
-	public partial class <#=  fileName #>: IPreprocessedTextTransformation
+
+namespace <#= classNamespace #>
+{
+	public partial class <#=  fileNameWithoutExtension #>: IPreprocessedTextTransformation
     {
-        public <#=  fileName #>(V1Helper helper)
+        public <#=  fileNameWithoutExtension #>(V1Helper helper)
         {
 			this.Helper = helper;
             this.Host = this.Helper.CallingTemplate.Host;
@@ -54,12 +63,9 @@ foreach (var filePath in templateFilePaths)
 
         public V1Helper Helper { get; private set; }
     }
-<#
-}
-
-#>
 }
 <#
+}
 #>
 <#+
 public IEnumerable<ProjectItem> GetAllProjectItemsRecursive(ProjectItems projectItems)
