--- a/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/ModelTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/ModelTemplate.tt
@@ -16,6 +16,7 @@
 <#@ assembly name="VSLangProj80" #>
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
+<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.AppConfig" name="AppConfig" #>
 <#
 
 #>
