--- a/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
@@ -17,6 +17,12 @@
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
 <#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.AppConfig" name="AppConfig" #>
+<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.PersistableDomainClassConfig" name="DomainClassConfig" #>
 <#
+if (AppConfig != null)
+{
+#>
 
+<#
+}
 #>
