Keeping V1 around for reference. fixed so V1-specific functionality is in V1 folder. Made TextTransformationSessionBase a concrete class and moved functionality in the extended class to AppGenerator

--- a/Zirpl.AppEngine.CodeGeneration.VS2013/V1/PartialTemplateClasses.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/V1/PartialTemplateClasses.tt
@@ -55,7 +55,7 @@ foreach (var filePath in templateFilePaths)
 
 namespace <#= classNamespace #>
 {
-	public partial class <#=  fileNameWithoutExtension #>: IPreprocessedTextTransformation
+	public partial class <#=  fileNameWithoutExtension #>
     {
         public <#=  fileNameWithoutExtension #>(<#=helperTypeName #> helper)
         {
