Continuing to refine the ConfigModel and parsing of config files to generate the model

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
@@ -1,5 +1,5 @@
 ﻿<#@ template  debug="true" hostSpecific="true" #>
-<#@ output extension=".cs" #>
+<#@ output extension=".json" #>
 <#@ assembly name="$(SolutionDir)Zirpl.AppEngine.CodeGeneration.VS2013\bin\$(Configuration)\Zirpl.AppEngine.CodeGeneration.VS2013.dll" #>
 <#@ import namespace="Zirpl.AppEngine.CodeGeneration" #>
 <#
