--- a/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
@@ -5,6 +5,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.Reflection" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="Newtonsoft.Json" #>
 <#@ import namespace="Zirpl.AppEngine.Model" #>
 <#@ import namespace="Zirpl.AppEngine.Model.Metadata" #>
 <#@ import namespace="Zirpl.AppEngine.CodeGeneration" #>
@@ -17,8 +18,8 @@
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
 <#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.AppConfig" name="AppConfig" #>
-<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.FileToGenerate" name="FileToGenerate" #>
-<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.PersistableDomainClassConfig" name="DomainClassConfig" #>
+<#@ parameter type="Zirpl.AppEngine.CodeGeneration.TextTemplating.FileToGenerate" name="FileToGenerate" #>
+<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.DomainTypeInfo" name="DomainType" #>
 <#
 if (AppConfig != null)
 {
