--- a/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/V2/Templates/Model/PersistableDomainClassTemplate.tt
@@ -17,13 +17,16 @@
 <#@ assembly name="VSLangProj80" #>
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
-<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.AppConfig" name="AppConfig" #>
 <#@ parameter type="Zirpl.AppEngine.CodeGeneration.TextTemplating.FileToGenerate" name="FileToGenerate" #>
+<#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.AppInfo" name="App" #>
 <#@ parameter type="Zirpl.AppEngine.CodeGeneration.V2.ConfigModel.DomainTypeInfo" name="DomainType" #>
 <#
-if (AppConfig != null)
+if (App != null)
 {
 #>
+public partial class asdasdasd
+{
+}
 <#
 }
 #>
