--- a/Zirpl.AppEngine.CodeGeneration.VS2013/AppGeneration/Templates/Model/PersistableDomainClassTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/AppGeneration/Templates/Model/PersistableDomainClassTemplate.tt
@@ -1,5 +1,4 @@
 ﻿<#@ template language="C#" hostSpecific="true" #>
-<#@ output extension=".log" #>
 <#@ import namespace="System" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Collections.Generic" #>
@@ -11,24 +10,23 @@
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
-<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ConfigModel" #>
-<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ConfigModel.FileGeneration" #>
+<#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config" #>
 <#@ assembly name="EnvDTE" #>
 <#@ assembly name="VSLangProj" #>
 <#@ assembly name="VSLangProj80" #>
 <#@ assembly name="System.Xml" #>
 <#@ assembly name="System.Xml.Serialization" #>
-<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating.TransformOutputFile" name="FileToGenerate" #>
-<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ConfigModel.App" name="App" #>
-<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ConfigModel.DomainTypeInfo" name="DomainType" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating.TemplateOutputFile" name="TemplateOutputFile" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.App" name="App" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.DomainType" name="DomainType" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ClassToGenerate" name="ClassToGenerate" #>
 <#
-if (App != null)
-{
+
 #>
-public partial class <#= ((ClassOutputFile)FileToGenerate).ClassName #>
+public partial class <#= ClassToGenerate.ClassName #>
 {
 	
 }
 <#
-}
+
 #>
