Strategies are now being used to create the TemplateOutputFiles

--- a/Zirpl.AppEngine.CodeGeneration.VS2013/AppGeneration/TextTemplating/V1/Templates/Model/PersistableDomainClassTemplate.tt
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/AppGeneration/TextTemplating/V1/Templates/Model/PersistableDomainClassTemplate.tt
@@ -19,7 +19,7 @@
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.TextTemplating.TemplateOutputFile" name="TemplateOutputFile" #>
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.App" name="App" #>
 <#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.Config.DomainType" name="DomainType" #>
-<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.ClassToGenerate" name="ClassToGenerate" #>
+<#@ parameter type="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration.TextTemplating.ClassToGenerate" name="ClassToGenerate" #>
 <#
 
 #>
