AppGenerator is now a class that can be created and disposed of and it exposes the TransformationContext instance so endusers can easily use it to create more code

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
@@ -3,5 +3,8 @@
 <#@ assembly name="$(SolutionDir)Zirpl.AppEngine.CodeGeneration.VS2013\bin\$(Configuration)\Zirpl.AppEngine.VisualStudioAutomation.dll" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#
-	this.GenerateV1App();
+	using (var appGenerator = new AppGenerator(this))
+	{
+		appGenerator.GenerateV1App();
+	}
 #>
