--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
@@ -1,5 +1,5 @@
 ﻿<#@ template  debug="true" hostSpecific="true" #>
-<#@ output extension=".json" #>
+<#@ output extension=".txt" #>
 <#@ assembly name="$(SolutionDir)Zirpl.AppEngine.CodeGeneration.VS2013\bin\$(Configuration)\Zirpl.AppEngine.VisualStudioAutomation.dll" #>
 <#@ import namespace="Zirpl.AppEngine.VisualStudioAutomation.AppGeneration" #>
 <#
