changes to IStaticLookup and extension methods

--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.tt
@@ -7,6 +7,9 @@
 <#
 	using (var appGenerator = new AppGenerator(this))
 	{
-		appGenerator.GenerateFiles(new IOutputFileBuilder[] { new Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.PersistableDomainClassBuilder() });
+		appGenerator.GenerateFiles(new IOutputFileBuilder[] { 
+			new Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.PersistableDomainClassBuilder(),
+			new Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.ModelExtensionsClassBuilder(),
+			new Zirpl.Examples.Commerce.CodeGeneration.Templates.Model.EnumBuilder() });
 	}
 #>
